enable convert between 4 different exercises

--- a/CrunchTime/app/src/main/res/layout/content_main.xml
+++ b/CrunchTime/app/src/main/res/layout/content_main.xml
@@ -31,7 +31,8 @@
         android:id="@+id/resetButton"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/calorieText"
-        android:layout_toStartOf="@+id/calorieText" />
+        android:layout_toStartOf="@+id/calorieText"
+        android:onClick="onButtonClick2" />
 
     <EditText
         android:layout_width="wrap_content"
