--- a/CrunchTime/app/src/main/res/layout/content_main.xml
+++ b/CrunchTime/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.jenni_000.crunchtime.MainActivity"
     tools:showIn="@layout/activity_main"
-    android:background="#dea3a3a3"
+    android:background="@drawable/abstractbackground"
     android:id="@+id/ap">
 
     <Button
@@ -43,8 +43,11 @@
         android:layout_marginTop="38dp"
         android:layout_below="@+id/calculateButton"
         android:layout_centerHorizontal="true"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff" />
+        android:textColor="#2A83A1"
+        android:textColorHint="#2A83A1"
+        android:textSize="20sp"
+        android:hint="YOUR GOAL"
+        android:gravity="center_horizontal"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,9 +64,9 @@
         android:id="@+id/imageView2"
         android:src="@drawable/pushup"
         android:padding="5dp"
-        android:layout_centerVertical="true"
-        android:layout_alignRight="@+id/calculateButton"
-        android:layout_alignEnd="@+id/calculateButton" />
+        android:layout_below="@+id/calorieText"
+        android:layout_alignLeft="@+id/imageView3"
+        android:layout_alignStart="@+id/imageView3" />
 
     <ImageView
         android:layout_width="160dp"
@@ -91,9 +94,9 @@
         android:id="@+id/imageView"
         android:src="@drawable/situp"
         android:padding="5dp"
-        android:layout_alignTop="@+id/imageView2"
-        android:layout_toRightOf="@+id/imageView2"
-        android:layout_toEndOf="@+id/imageView2" />
+        android:layout_below="@+id/calorieText"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <EditText
         android:layout_width="50dp"
@@ -102,11 +105,12 @@
         android:ems="10"
         android:id="@+id/editText"
         android:hint="reps"
-        android:layout_alignBottom="@+id/imageView2"
-        android:layout_alignLeft="@+id/calorieEditText"
-        android:layout_alignStart="@+id/calorieEditText"
         android:textColor="#ffffff"
-        android:textColorHint="#ffffff"/>
+        android:textColorHint="#ffffff"
+        android:gravity="center_horizontal"
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_toLeftOf="@+id/calorieText"
+        android:layout_toStartOf="@+id/calorieText" />
 
     <EditText
         android:layout_width="50dp"
@@ -115,11 +119,12 @@
         android:ems="10"
         android:id="@+id/editText2"
         android:hint="reps"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
+        android:gravity="center_horizontal"
         android:layout_alignBottom="@+id/imageView"
         android:layout_alignRight="@+id/calorieEditText"
-        android:layout_alignEnd="@+id/calorieEditText"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff"/>
+        android:layout_alignEnd="@+id/calorieEditText" />
 
     <EditText
         android:layout_width="50dp"
@@ -128,11 +133,12 @@
         android:ems="10"
         android:id="@+id/editText3"
         android:hint="mins"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
+        android:gravity="center_horizontal"
         android:layout_alignBottom="@+id/imageView3"
         android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff"/>
+        android:layout_alignStart="@+id/editText" />
 
     <EditText
         android:layout_width="50dp"
@@ -145,7 +151,8 @@
         android:layout_alignLeft="@+id/editText2"
         android:layout_alignStart="@+id/editText2"
         android:textColor="#ffffff"
-        android:textColorHint="#ffffff"/>
+        android:textColorHint="#ffffff"
+        android:gravity="center_horizontal"/>
 
 
 </RelativeLayout>
