--- a/CrunchTime/app/src/main/res/layout/content_main.xml
+++ b/CrunchTime/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,7 +22,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/calorieEditText"
         android:layout_alignStart="@+id/calorieEditText"
-        android:onClick="onButtonClick1" />
+        android:onClick="onButtonClick1"
+        android:layout_marginLeft="75dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -32,7 +33,8 @@
         android:onClick="onButtonClick2"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/calorieEditText"
-        android:layout_alignEnd="@+id/calorieEditText" />
+        android:layout_alignEnd="@+id/calorieEditText"
+        android:layout_marginLeft="200dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -40,14 +42,15 @@
         android:inputType="number"
         android:ems="10"
         android:id="@+id/calorieEditText"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="60dp"
         android:layout_below="@+id/calculateButton"
         android:layout_centerHorizontal="true"
         android:textColor="#2A83A1"
         android:textColorHint="#2A83A1"
         android:textSize="20sp"
         android:hint="YOUR GOAL"
-        android:gravity="center_horizontal"/>
+        android:gravity="center_horizontal"
+        android:layout_marginLeft="50dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,103 +59,124 @@
         android:text="Calories"
         android:id="@+id/calorieText"
         android:layout_below="@+id/calorieEditText"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="140dp" />
 
-    <ImageView
+    <FrameLayout
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:id="@+id/imageView2"
-        android:src="@drawable/pushup"
-        android:padding="5dp"
+        android:id="@+id/Layout1"
         android:layout_below="@+id/calorieText"
-        android:layout_alignLeft="@+id/imageView3"
-        android:layout_alignStart="@+id/imageView3" />
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="10dp">
 
-    <ImageView
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView"
+            android:src="@drawable/situp"
+            android:padding="5dp" />
+        <EditText
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editText"
+            android:hint="reps"
+            android:textColor="#ffffff"
+            android:textColorHint="#ffffff"
+            android:gravity="center_horizontal"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="55dp"
+            android:layout_marginTop="110dp" />
+
+    </FrameLayout>
+
+    <FrameLayout
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:id="@+id/imageView3"
-        android:src="@drawable/jumpingjack"
-        android:padding="5dp"
-        android:layout_below="@+id/imageView2"
-        android:layout_toLeftOf="@+id/imageView4"
-        android:layout_toStartOf="@+id/imageView4" />
+        android:id="@+id/Layout2"
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="175dp">
 
-    <ImageView
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView2"
+            android:src="@drawable/pushup"
+            android:padding="5dp"/>
+
+        <EditText
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editText2"
+            android:hint="reps"
+            android:textColor="#ffffff"
+            android:textColorHint="#ffffff"
+            android:gravity="center_horizontal"
+            android:layout_marginLeft="55dp"
+            android:layout_marginTop="110dp" />
+
+    </FrameLayout>
+
+    <FrameLayout
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:id="@+id/imageView4"
-        android:src="@drawable/jogging"
-        android:padding="5dp"
-        android:layout_alignLeft="@+id/imageView"
-        android:layout_alignStart="@+id/imageView"
-        android:layout_alignBottom="@+id/imageView3" />
+        android:id="@+id/Layout3"
+        android:layout_marginTop="320dp"
+        android:layout_marginLeft="10dp">
 
-    <ImageView
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:id="@+id/imageView"
-        android:src="@drawable/situp"
-        android:padding="5dp"
-        android:layout_below="@+id/calorieText"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView3"
+            android:src="@drawable/jumpingjack"
+            android:padding="5dp"/>
+        <EditText
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editText3"
+            android:hint="mins"
+            android:textColor="#ffffff"
+            android:textColorHint="#ffffff"
+            android:gravity="center_horizontal"
+            android:layout_alignBottom="@+id/imageView3"
+            android:layout_marginTop="110dp"
+            android:layout_marginLeft="55dp" />
 
-    <EditText
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:hint="reps"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff"
-        android:gravity="center_horizontal"
-        android:layout_alignBottom="@+id/imageView2"
-        android:layout_toLeftOf="@+id/calorieText"
-        android:layout_toStartOf="@+id/calorieText" />
+    </FrameLayout>
+    <FrameLayout
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:id="@+id/Layout4"
+        android:layout_marginTop="320dp"
+        android:layout_marginLeft="175dp">
 
-    <EditText
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText2"
-        android:hint="reps"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff"
-        android:gravity="center_horizontal"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_alignRight="@+id/calorieEditText"
-        android:layout_alignEnd="@+id/calorieEditText" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/imageView4"
+                android:src="@drawable/jogging"
+                android:padding="5dp"/>
 
-    <EditText
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText3"
-        android:hint="mins"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff"
-        android:gravity="center_horizontal"
-        android:layout_alignBottom="@+id/imageView3"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
+            <EditText
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/editText4"
+                android:hint="mins"
+                android:textColor="#ffffff"
+                android:textColorHint="#ffffff"
+                android:gravity="center_horizontal"
+                android:layout_marginLeft="55dp"
+                android:layout_marginTop="110dp" />
+    </FrameLayout>
 
-    <EditText
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText4"
-        android:hint="mins"
-        android:layout_alignTop="@+id/editText3"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff"
-        android:gravity="center_horizontal"/>
-
-
-</RelativeLayout>
+</FrameLayout>
