--- a/CrunchTime/app/src/main/res/layout/content_main.xml
+++ b/CrunchTime/app/src/main/res/layout/content_main.xml
@@ -87,17 +87,17 @@
                     android:src="@drawable/situp"
                     android:padding="5dp" />
                 <EditText
-                    android:layout_width="50dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="number"
                     android:ems="10"
                     android:id="@+id/editText"
-                    android:textColor="#000000"
+                    android:textColor="#ffffff"
                     android:textColorHint="#ffffff"
                     android:gravity="center_horizontal"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginLeft="55dp"
-                    android:layout_marginTop="80dp" />
+                    android:layout_marginTop="100dp"
+                    android:hint="Reps" />
 
             </FrameLayout>
 
@@ -117,16 +117,16 @@
                     android:padding="5dp"/>
 
                 <EditText
-                    android:layout_width="50dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="number"
                     android:ems="10"
                     android:id="@+id/editText2"
-                    android:textColor="#000000"
-                    android:textColorHint="#009bd0"
+                    android:textColor="#ffffff"
+                    android:textColorHint="#ffffff"
                     android:gravity="center_horizontal"
-                    android:layout_marginLeft="55dp"
-                    android:layout_marginTop="80dp" />
+                    android:layout_marginTop="100dp"
+                    android:hint="Reps" />
 
             </FrameLayout>
 
@@ -144,17 +144,17 @@
                     android:src="@drawable/jumpingjack"
                     android:padding="5dp"/>
                 <EditText
-                    android:layout_width="50dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="number"
                     android:ems="10"
                     android:id="@+id/editText3"
-                    android:textColor="#000000"
+                    android:textColor="#ffffff"
                     android:textColorHint="#ffffff"
                     android:gravity="center_horizontal"
                     android:layout_alignBottom="@+id/imageView3"
-                    android:layout_marginTop="80dp"
-                    android:layout_marginLeft="55dp" />
+                    android:layout_marginTop="100dp"
+                    android:hint="mins" />
 
             </FrameLayout>
 
@@ -173,7 +173,7 @@
                         android:padding="5dp"/>
 
                     <EditText
-                        android:layout_width="50dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:inputType="number"
                         android:ems="10"
@@ -182,8 +182,7 @@
                         android:textColor="#ffffff"
                         android:textColorHint="#ffffff"
                         android:gravity="center_horizontal"
-                        android:layout_marginLeft="55dp"
-                        android:layout_marginTop="110dp" />
+                        android:layout_marginTop="100dp" />
             </FrameLayout>
 
         </FrameLayout>
