--- a/CrunchTime/app/src/main/res/layout/content_main.xml
+++ b/CrunchTime/app/src/main/res/layout/content_main.xml
@@ -47,10 +47,9 @@
         android:layout_centerHorizontal="true"
         android:textColor="#ffffff"
         android:textColorHint="#2A83A1"
-        android:textSize="20sp"
-        android:hint="YOUR GOAL"
+        android:hint="@string/goal"
         android:gravity="center_horizontal"
-        android:layout_marginLeft="50dp" />
+        android:layout_marginLeft="65dp" />
 
     <TextView
         android:layout_width="wrap_content"
